# RustBootcamp

./: README.md
Month1/Week1/exercise_3/src/: main.rs
auth_service/src/: auth_utils.rs  database.rs  lib.rs  main.rs
bank/src/: lib.rs
basic_error_handling/: Cargo.toml
basic_error_handling/src/: main.rs
blog/blog_api/: Cargo.toml
blog/blog_api/src/: main.rs
blog/blog_shared/: Cargo.toml
blog/blog_shared/src/: lib.rs
blog/blog_web/: Cargo.toml
blog/blog_web/src/: main.rs
box_smart_pointer/src/: main.rs
deref_coercion/src/: employee.rs  main.rs
deriving_tratis/: Cargo.toml
deriving_tratis/src/: main.rs
draw_consumer/: Cargo.toml
draw_consumer/src/: main.rs
features/: Cargo.toml
features/src/: lib.rs
generic_lifetime/: Cargo.toml
generic_lifetime/src/: main.rs
generics/src/: main.rs
multiple_error_types/src/: main.rs
propagating_errors/src/: main.rs
rc_smart_pointer/src/: main.rs
recoverable_errors/src/: main.rs
result_and_option/src/: main.rs
struct_and_lifetime/: Cargo.toml
struct_and_lifetime/src/: main.rs
super_traits/src/: main.rs
trait_bound/src/: main.rs
traits/src/: main.rs
traits_object/: Cargo.toml
traits_object/src/: main.rs
unrecoverable_errors/src/: main.rs
