[package]
name = "features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb = {version = "0.8.36", features=["serde"], optional = true}
serde = {version = "1.0.183", features = ["derive"], optional = true}

[features]
default = ["color"]
color = ["dep:rgb"]
shapes = ["color", "dep:serde", "rgb?/serde"]